# MaiBot

./: .coderabbit.yaml  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Plan.md  README.md  bot.py  crowdin.yml  docker-compose.yml  pyproject.toml  requirements.txt  saka.py  代码备忘.md
.github/: pull_request_template.md
agentlite/: CHANGELOG.md  TEST_PLAN.md
changelogs/: changelog.md  mai_next_design.md  mai_next_todo.md
code_scripts/: generate_database_datamodel_py.py  migrate_expression_jargon_db.py
dashboard/: README.md  bunfig.toml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
docs/: README_CN.md  README_EN.md  a_memorix_sync.md  crowdin_workflow_alignment_brief.md  github-actions-crowdin-workflow-report.md  i18n.md  minimal-cross-platform-plan.md
docs-src/: MAINTAIN_A_MEMORIX_SUBMODULE.md
mai_knowledge/: knowledge.json
prompts/: action.prompt  brain_planner.prompt  default_expressor_prompt.prompt  dream_react_head.prompt  dream_summary_prompt.prompt  hippo_topic_analysis.prompt  hippo_topic_summary.prompt  jargon_explainer_summarize.prompt  jargon_inference_with_context.prompt  learn_style.prompt  lpmm_get_knowledge.prompt  maidairy_cognition.prompt  maidairy_context_summarize.prompt  maidairy_knowledge_category.prompt  maidairy_knowledge_extract.prompt  maidairy_knowledge_retrieve.prompt  maidairy_replyer.prompt  memory_retrieval_react_final.prompt  memory_retrieval_react_prompt_head.prompt  planner.prompt  reflect_judge_prompt.prompt  replyer_light.prompt
pytests/: conftest.py  logger.py  test_adapter_runtime_state.py  test_context_message_fallback.py  test_gemini_thought_signatures.py  test_html_render_service.py  test_maisaka_builtin_at.py  test_maisaka_builtin_context.py  test_maisaka_builtin_query_memory.py  test_maisaka_message_adapter.py  test_maisaka_tool_logging.py  (+21 more)
(+1161 files in other folders)
